python/testData/quickFixes/PyAddImportQuickFixTest/elementOrdering/main.py
<error descr="Unresolved reference 'path'">pa<caret>th</error>